# Vidtuber

./: .flake8  .gitignore  .pylintrc  AUTHORS  BUGS  CHANGELOG  INSTALL  MANIFEST.in  README.md  TODO  hatch_build.py  io.github.jeanslack.vidtuber.appdata.xml  launcher  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: ask-a-question.md  bug_report.md  feature_request.md
.github/workflows/: python-package.yml  tests.yml
debian/: README.Debian  changelog  control  copyright  rules
develop/: make_pot.sh
develop/gettext_utils/: babelutils.py  create_POT_file.sh  generate_MO_files.sh  update_PO_files.sh
develop/tools/: AppImage_Update_Tool.sh  AppImage_build.sh  AppRun  create_ICNS.sh  generate_INNO_setup.py  inkscape2png.py  pyinstaller_setup.py  rsvg2png.py
docs/: Localization_Guidelines.md  localization_guidelines.md  pyinstaller_setup.md
requirements/: build-debpkg.txt  development.txt  installation.txt
tests/: test_display_GUI.py  test_utils.py
vidtuber/: gui_app.py
vidtuber/art/: io.github.jeanslack.vidtuber.desktop
vidtuber/art/icons/Vidtuber-Colours/: COPYING-ICONS.txt
vidtuber/art/icons/Vidtuber-Light/: COPYING-ICONS.txt
vidtuber/data/FFMPEG/: README
vidtuber/data/YT-DLP/: README
vidtuber/data/hicolor/: COPYING-ICONS.txt
vidtuber/data/icons/Vidtuber-Colours/: COPYING-ICONS.txt
vidtuber/data/icons/Vidtuber-Dark/: COPYING-ICONS.txt
vidtuber/data/locale/: README  vidtuber.pot
vidtuber/data/locale/ar_SA/LC_MESSAGES/: vidtuber.po
vidtuber/data/locale/cs_CZ/LC_MESSAGES/: vidtuber.po
vidtuber/data/locale/de_DE/LC_MESSAGES/: vidtuber.po
vidtuber/data/locale/en_US/LC_MESSAGES/: videomass.po  vidtuber.po
vidtuber/data/locale/es_CU/LC_MESSAGES/: vidtuber.po
vidtuber/data/locale/es_ES/LC_MESSAGES/: vidtuber.po
vidtuber/data/locale/es_MX/LC_MESSAGES/: vidtuber.po
vidtuber/data/locale/fr_FR/LC_MESSAGES/: vidtuber.po
vidtuber/locale/: vidtuber.pot
vidtuber/locale/en_US/LC_MESSAGES/: videomass.mo  videomass.po
vidtuber/locale/es_CU/LC_MESSAGES/: vidtuber.mo  vidtuber.po
vidtuber/locale/es_ES/LC_MESSAGES/: vidtuber.mo  vidtuber.po
vidtuber/locale/es_MX/LC_MESSAGES/: vidtuber.mo  vidtuber.po
vidtuber/locale/fr_FR/LC_MESSAGES/: vidtuber.mo  vidtuber.po
vidtuber/locale/it_IT/LC_MESSAGES/: vidtuber.mo  vidtuber.po
vidtuber/locale/nl_NL/LC_MESSAGES/: vidtuber.mo  vidtuber.po
vidtuber/locale/pt_BR/LC_MESSAGES/: vidtuber.mo  vidtuber.po
vidtuber/locale/ru_RU/LC_MESSAGES/: vidtuber.mo  vidtuber.po
vidtuber/locale/zh_CN/LC_MESSAGES/: vidtuber.mo  vidtuber.po
vidtuber/share/: README
vidtuber/vdms_dialogs/: infoprg.py  playlist_indexing.py  preferences.py  showlogs.py  wizard_dlg.py  ydl_mediainfo.py
vidtuber/vdms_io/: io_tools.py  make_filelog.py
vidtuber/vdms_main/: main_frame.py
vidtuber/vdms_panels/: long_processing_task.py  textdrop.py  youtubedl_ui.py
vidtuber/vdms_sys/: app_const.py  argparser.py  configurator.py  msg_info.py  settings_manager.py
vidtuber/vdms_threads/: ydl_downloader.py  ydl_extractinfo.py
vidtuber/vt_dialogs/: about_dialog.py  check_new_version.py  confirm_dialog.py  infoprg.py  list_warning.py  playlist_indexing.py  preferences.py  settings_vidtuber.py  settings_ytdlp.py  showlogs.py  subtitles_editor.py  vidtuber_check_version.py  widget_utils.py  wizard_dlg.py  ydl_mediainfo.py
vidtuber/vt_dialogs/Unused/: Copia di playlist_indexing.py
vidtuber/vt_io/: checkup.py  io_tools.py  make_filelog.py
vidtuber/vt_main/: main_frame.py
vidtuber/vt_panels/: downloader_gui.py  formatcode.py  formatcode_exec.py  formatcode_id.py  long_processing_task.py  long_task_ytdlp.py  textdrop.py  youtubedl_ui.py
vidtuber/vt_sys/: about_app.py  app_const.py  argparser.py  configurator.py  external_package.py  settings_manager.py
vidtuber/vt_threads/: check_bin.py  downloader_thread.py  generic_downloads.py  get_output_thread.py  shutdown.py  ydl_downloader.py  ydl_extractinfo.py  ydl_get_formatcode.py
vidtuber/vt_utils/: get_bmpfromsvg.py  utils.py
xdg/: io.github.jeanslack.vidtuber.appdata.xml  io.github.jeanslack.vidtuber.desktop
(+7 files in other folders)
